doc: abstract partially completed

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -23,7 +23,14 @@
 \input{front.tex}
 
 \begin{abstract}	
-Max 2000 characters, strict.
+Nowdays a lot of companies and social entities are wondering about the implications of Artificial Intelligence usages in the daily life of people, with a 
+huge interests for the implications in discriminations that may occour using these systems. A lot of methodologies in several fields like computer science, statistics and social sciences have been formalized in order to 
+afford the problem of the fairness in social systems and this problem is beign dealt with during the development of the modern AI systems. \\
+In this work we propose several methods that have been developed considering fairness from the design phase, that's why they are called \emph{fair-by-design-method}
+In order to develop these methods we used well-known Python libraries such as \emph{Pandas}, \emph{Sci-kit-learn} and other libraries implemented by ourselves.
+A fundamental step of this work is the comparison work of the results obtained applying the ourselves implemented method to the real-world scenario and using approaches that do not take account of fairness.
+
+
 \end{abstract}
 
 \begin{dedication} % this is optional
