doc: front and algorithms written down.

--- a/front.tex
+++ b/front.tex
@@ -16,23 +16,19 @@
 		
 		\Large
 		Scuola di Ingegneria e Architettura \\
-		Corso di Laurea (Magistrale) in Ingegneria e Scienze Informatiche
+		Corso di Laurea Magistrale in Ingegneria e Scienze Informatiche
 		
 		\Huge
 		\vspace{4cm}
 		\textbf{
-			Title Thesis Here
-			\\
-			Long Titles Should Be Split
-			\\
-			On Multiple Lines
+			Fair-by-design algorithm for access to education
 		}
 		
 		\large
 		\vspace{1cm}
 		Tesi di laurea in 
 		\\
-		\textsc{(Materia di Riferimento)}
+		\textsc{Intelligent System Engineering}
 		
 		\vspace{5.5cm}
 		\begin{minipage}[t]{0.64\textwidth}
@@ -51,7 +47,7 @@
 			\begin{flushright}
 				\textit{Candidato} 
 				\\ 
-				\textbf{Nome Cognome}
+				\textbf{Antonio Iannotta}
 			\end{flushright}
 		\end{minipage}\\
 		
