doc: thesis fixed

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -261,7 +261,7 @@ Here, we define two cases for the \textit{new\_value} function based on the type
     \item variable continue the \textit{new\_value} is randomly chosen within the least frequent interval.
 \end{itemize}
 
-\section{Algorithm Pseudocode}
+\subsection{Algorithm Pseudocode}
 
 The algorithm is outlined using a pseudocode representation below:
 
