doc: introduction partially completed

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -50,22 +50,12 @@ Never too far down, to come back
 \label{chap:introduction}
 %----------------------------------------------------------------------------------------
 
-Write introduction here.
+In recent years, there has been a notable increase in the utilization of artificial intelligence (AI) systems across various sectors. This rise is attributed to advancements in technology, the accessibility of extensive data, and heightened computational capabilities. AI has transcended its role as a mere performance enhancer and has begun exerting a profound impact on social contexts. These systems are now pervasive in healthcare, education, criminal justice, and other crucial domains, fundamentally reshaping decision-making processes and societal interactions. However, the reliance of AI systems on data for learning and decision-making implies that they inherit the biases embedded in these data. This inherent bias has the potential to perpetuate existing societal imbalances and prejudices. Addressing bias and ensuring fairness in AI algorithms is hence a pressing concern, necessitating continuous research, responsible development practices, and vigilant oversight to guarantee equitable outcomes for all. In this discussion, we will delve into the intricate dynamics of biases and fairness in AI systems, exploring viable strategies to effectively mitigate these challenges.
 
-%
-\paragraph{Thesis Structure.} % Optional paragraph title
-%
-
-(This is optional an optional paragraph.)
-%
-Accordingly, the reminder of this thesis is structures as follows.
-%
-\Cref{chap:background} discusses (briefly describe the content of \cref{chap:background}).
-%
-Describe other chapters here in a similar way.
-%
-Finally, \Cref{chap:conclusions} concludes this thesis by summarising its main contribution.
-
+\paragraph{Artificial Intelligence}
+\paragraph{Bias}
+\paragraph{Fairness}
+\paragraph{Fair-by-design method}
 %----------------------------------------------------------------------------------------
 \chapter{State of the Art} % or Background
 \label{chap:background}
