doc: state of art completed

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -65,11 +65,51 @@ Since the huge impact that AI systems are having on daily life and more in gener
 \label{chap:background}
 %----------------------------------------------------------------------------------------
 
-Write background here.
+This chapter provides an overview of the previous works and scientific literature that led us to the implementation of fair-by-design methods. This chapter strats
+with an overview on \textbf{artificial intelligence} and its application in both critical sectors and socio-technical systems. Then we go deeply into the issues of \textbf{bias} and \textbf{fairness} in AI systems.
 
-This section is likely to contain a lot of citations.
+\section{Artificial Intelligence}
+Artificial Intelligence (AI) and Machine Learning (ML) are transformative technologies that are redefining the way we interact with the world. AI refers to the development of computer systems capable of performing tasks that typically require human intelligence, such as speech recognition, problem-solving, and learning. Machine Learning is a subset of AI, involving the creation of algorithms that allow computers to learn patterns and make predictions based on data, improving their performance over time. \\
+AI encompasses a broad range of techniques, including natural language processing, computer vision, robotics, and expert systems. Machine Learning, on the other hand, involves algorithms that enable machines to learn and improve their performance without being explicitly programmed. ML algorithms are designed to identify patterns and make informed decisions based on data input. \\
+If we consider examples of AI in critical sectors such as healthcare and autonomous driving it becomes clear how AI could impact our lives. Beyond these applications it becomes necessary to consider the applications of AI in socio-technical systems. \\
+Socio-technical systems refer to complex interplays between people, technology, and social institutions. AI and ML have a profound impact on these systems, influencing how individuals interact with technology and how society functions as a whole. \\
+The integration of AI and ML raises ethical questions regarding privacy, biases in algorithms, and job displacement due to automation. It is crucial to develop frameworks that ensure fairness, transparency, and accountability in AI systems to mitigate potential harm and ensure equitable benefits. \\
+
+\section{Bias}
+Artificial Intelligence (AI) holds immense promise for revolutionizing various aspects of our lives. From aiding decision-making processes to automating routine tasks, AI systems are increasingly becoming integrated into our daily lives. However, a growing concern within the AI community and society at large is the issue of biases embedded in AI algorithms.
+
+\subsection{Understanding Bias in AI}
+Bias in AI refers to the unfair and skewed representation or treatment of individuals or groups based on factors such as race, gender, age, socioeconomic status, or other characteristics. These biases can be unintentionally perpetuated during the development and training of AI models due to historical data imbalances, societal prejudices, or flawed algorithms.
+
+\subsection{Sources of Bias}
+\begin{itemize}
+    \item \textbf{Historical data}: AI models are often trained on historical data, reflecting past societal biases and inequalities. If the data contains biased patterns, the AI system can learn and replicate those biases.
+    \item \textbf{Human bias}: The biases of the people involved in collecting, selecting, and labeling the data used for training AI models can seep into the algorithms.
+    \item \textbf{Algorithmic bias}: The algorithms themselves can inadvertently introduce or magnify biases due to their design, assumptions, or mathematical formulations.
+\end{itemize}
+
+\subsection{Example of Bias in AI}
+\subsubsection{Race and Gender Bias in Facial Recognition}
+Facial recognition systems have shown significant biases in accurately identifying individuals based on race and gender. Studies have revealed that these systems are more accurate for lighter-skinned individuals, while misidentifying or underrepresenting people with darker skin tones, especially women.
+
+\subsubsection{Criminal Justice Bias}
+AI algorithms used in criminal justice for risk assessment and sentencing have been found to exhibit racial biases. These algorithms tend to overpredict the likelihood of reoffending for certain minority groups, leading to unfair and discriminatory outcomes.
+
+\subsubsection{Recruitment Bias}
+AI algorithms used in recruitment processes have shown gender bias by favoring male candidates over equally or more qualified female candidates. This bias can perpetuate gender imbalances in the workplace.
+
+\section{Fairness}
+Fairness in AI refers to the absence of discrimination or bias in the creation, deployment, and outcomes of AI systems. It's about treating individuals fairly and equitably, irrespective of their gender, race, age, ethnicity, or any other characteristic. Achieving fairness in AI is fundamental to building trust and ensuring that AI benefits all members of society. \\
+Unfair AI can perpetuate and amplify existing societal inequalities, reinforcing stereotypes and excluding certain groups. Inaccurate credit scoring, biased hiring practices, and unfair sentencing are just a few examples of how unfair AI systems can have real and damaging consequences. \\
+To build AI systems that are fair and just, interdisciplinary collaboration and a commitment to inclusivity are essential. Developers, policymakers, and communities must work together to identify, understand, and rectify biases and disparities in AI. By embedding fairness as a core principle in AI development, we can create a future where AI benefits all, contributing to a more equitable society. \\
+
+In conclusion, fairness in AI is not just an ethical necessity but a fundamental requirement for fostering trust and ensuring the responsible and equitable deployment of AI systems. As we navigate the evolving landscape of AI, our collective efforts must prioritize fairness to harness the true potential of AI for the greater good.
+
+%Write background here.
+
+%This section is likely to contain a lot of citations.
 %
-For instance in \cite{AnzengruberSocInfo2013} the authors propose a novel means for tackling with the problem of preventing bad things from happening.
+%For instance in \cite{AnzengruberSocInfo2013} the authors propose a novel means for tackling with the problem of preventing bad things from happening.
 
 %----------------------------------------------------------------------------------------
 \chapter{Design} % possible chapter for Projects
